Add includeTxn in the journal listing api, this will add all the txn in the journals
